--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -2,6 +2,13 @@
 {% set version = "0.2" %}
 {% set build_number = "0" %}
 
+{% if os.environ.get("FEATURE_OLDGLIBC", "0") == "1" %}
+{% set OLDGLIBC = 1 %}
+{% else %}
+{% set OLDGLIBC = 0 %}
+{% endif %}
+
+
 package:
     name: {{ name }}
     version: {{ version }}
@@ -11,6 +18,15 @@ source:
 
 build:
     number: {{ build_number }}
+
+  script_env:
+    - FEATURE_OLDGLIBC [linux]
+
+  {% if OLDGLIBC %}
+  features:
+    - oldglibc
+  {% endif %}
+
 
 requirements:
     build:
@@ -22,6 +38,9 @@ requirements:
         - lpsolve
         - future
         - packaging
+        {% if OLDGLIBC %}
+        - oldglibc
+        {% endif %}
     
     run:
         - python
@@ -35,6 +54,9 @@ requirements:
         - scipy
         - future
         - packaging
+        {% if OLDGLIBC %}
+        - oldglibc
+        {% endif %}
 
 test:
     requires:
