--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ env:
     matrix:
         - CONDA_NPY=110  CONDA_PY=34
         - CONDA_NPY=112  CONDA_PY=36
-        - CONDA_NPY=111  CONDA_PY=35  FEATURE_OLDGLIBC=1
 
 install:
     - |
@@ -24,5 +23,6 @@ install:
       conda install --yes --quiet conda-build anaconda-client
 
 script:
+    - set -e
     - bash build.sh
     - bash conda_upload.sh
