--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -3,6 +3,12 @@
 {% set git_rev = "v0.2" %}
 {% set build_number = 0 %}
 
+{% if os.environ.get("FEATURE_OLDGLIBC", "0") == "1" %}
+    {% set OLDGLIBC = 1 %}
+{% else %}
+    {% set OLDGLIBC = 0 %}
+{% endif %}
+
 package:
     name: {{ name|lower }}
     version: {{ version }}
@@ -14,6 +20,14 @@ source:
 build:
     number: {{ build_number }}
 
+    script_env:
+        - FEATURE_OLDGLIBC [linux]
+
+    {% if OLDGLIBC %}
+    features:
+        - oldglibc
+    {% endif %}
+
 requirements:
     build:
         - python
@@ -24,6 +38,9 @@ requirements:
         - lpsolve
         - future
         - packaging
+        {% if OLDGLIBC %}
+        - oldglibc
+        {% endif %}
 
     run:
         - python
@@ -37,6 +54,9 @@ requirements:
         - pytables
         - xlrd
         - scipy
+        {% if OLDGLIBC %}
+        - oldglibc
+        {% endif %}
 
 test:
     requires:
