--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,22 +10,12 @@ environment:
         - TARGET_ARCH: x64
           CONDA_PY: 27
           CONDA_NPY: 111
-          CONDA_INSTALL_LOCN: C:\\Miniconda35-x64
+          CONDA_INSTALL_LOCN: C:\\Miniconda-x64
           
         - TARGET_ARCH: x64
           CONDA_PY: 27
           CONDA_NPY: 112
-          CONDA_INSTALL_LOCN: C:\\Miniconda35-x64
-
-        - TARGET_ARCH: x64
-          CONDA_PY: 34
-          CONDA_NPY: 111
-          CONDA_INSTALL_LOCN: C:\\Miniconda35-x64
-          
-        - TARGET_ARCH: x64
-          CONDA_PY: 34
-          CONDA_NPY: 112
-          CONDA_INSTALL_LOCN: C:\\Miniconda35-x64
+          CONDA_INSTALL_LOCN: C:\\Miniconda-x64
 
         - TARGET_ARCH: x64
           CONDA_PY: 36
