Another attempt at a release

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,19 +17,23 @@ env:
 
 install:
     - |
-      # install miniconda
-      MINICONDA_URL="https://repo.continuum.io/miniconda"
-      MINICONDA_FILE="Miniconda3-latest-Linux-x86_64.sh"
-      wget ${MINICONDA_URL}/${MINICONDA_FILE}
-      bash ${MINICONDA_FILE} -b
-      source ${HOME}/miniconda3/bin/activate root
-      
-      # add channels
-      conda config --add channels snorfalorpagus
+      if [ ! -f ${HOME}/miniconda3/bin/conda ] ; then
+          echo "Fresh miniconda install..."
+          MINICONDA_URL="https://repo.continuum.io/miniconda"
+          if [ `uname` == "Darwin" ]; then
+              MINICONDA_FILE="Miniconda3-latest-MacOSX-x86_64.sh"
+          else
+              MINICONDA_FILE="Miniconda3-latest-Linux-x86_64.sh"
+          fi
+          wget ${MINICONDA_URL}/${MINICONDA_FILE}
+          rm -rf ${HOME}/miniconda3
+          bash ${MINICONDA_FILE} -b -p ${HOME}/miniconda3
+      fi
+      export PATH=${HOME}/miniconda3/bin:$PATH
       conda config --add channels conda-forge
-      conda config --set show_channel_urls true
       
-      # install build tools
+      conda update --yes conda
+      conda config --set show_channel_urls true
       conda install --yes --quiet conda-build anaconda-client
 
 script:
