--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,38 +29,45 @@ build:
     {% endif %}
 
 requirements:
-    build:
-        - python
-        - setuptools
-        - numpy 1.8.*  # [not (win and (py35 or py36))]
-        - numpy 1.9.*  # [win and py35]
-        - numpy 1.11.*  # [win and py36]
-        - cython
-        - glpk
-        - lpsolve
-        - future
-        - packaging
-        {% if OLDGLIBC %}
-        - oldglibc
-        {% endif %}
-
-    run:
-        - python
-        - numpy >=1.8  # [not (win and (py35 or py36))]
-        - numpy >=1.9  # [win and py35]
-        - numpy >=1.11  # [win and py36]
-        - pandas
-        - glpk
-        - lpsolve
-        - future
-        - packaging
-        - networkx
-        - pytables
-        - xlrd
-        - scipy
-        {% if OLDGLIBC %}
-        - oldglibc
-        {% endif %}
+  build:
+    - python
+    - vc 9  # [win and py27]
+    - vc 10  # [win and py34]
+    - vc 14  # [win and (py35 or py36)]
+    - setuptools
+    - numpy 1.8.*  # [not (win and (py35 or py36))]
+    - numpy 1.9.*  # [win and py35]
+    - numpy 1.11.*  # [win and py36]
+    - cython
+    - glpk
+    - lp_solve
+    - future
+    - packaging
+    {% if OLDGLIBC %}
+    - oldglibc
+    {% endif %}
+  run:
+    - python
+    - vc 9  # [win and py27]
+    - vc 10  # [win and py34]
+    - vc 14  # [win and (py35 or py36)]
+    - numpy >=1.8  # [not (win and (py35 or py36))]
+    - numpy >=1.9  # [win and py35]
+    - numpy >=1.11  # [win and py36]
+    - pandas
+    - networkx
+    - glpk
+    - lp_solve
+    - pytables
+    - xlrd
+    - scipy
+    - future
+    - packaging
+    - jupyter
+    - matplotlib
+    {% if OLDGLIBC %}
+    - oldglibc
+{% endif %}
 
 test:
     requires:
