--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,12 @@ script:
 # Upload to anaconda only if master branch and not a PR.      
 deploy:
     provider: script
-    script: anaconda -t ${CONDA_UPLOAD_TOKEN} upload -u pywr ${HOME}/miniconda3/conda-bld/linux-64/*.tar.bz2 --force
+    script:
+    - |
+      if [ `uname` == "Darwin" ]; then
+          anaconda -t ${CONDA_UPLOAD_TOKEN} upload -u pywr ${HOME}/miniconda3/conda-bld/osx-64/*.tar.bz2 --force
+      else
+          anaconda -t ${CONDA_UPLOAD_TOKEN} upload -u pywr ${HOME}/miniconda3/conda-bld/linux-64/*.tar.bz2 --force
+      fi
     on:
         branch: master
